GeditApp: always set application name and icon

In GeditAppOsx, it was in the init() function. In GeditAppWin32, it was
in startup(). Now it is in GeditApp's init().

https://bugzilla.gnome.org/show_bug.cgi?id=707794